@@ -275,6 +275,8 @@ C API
 IDLE
 ----
 
+- Issue #18489: Add tests for SearchEngine. Original patch by Phil Webster.
+
 - Issue #18429: Format / Format Paragraph, now works when comment blocks
   are selected. As with text blocks, this works best when the selection
   only includes complete lines.
